Clear caches between loading images to prevent memory overflow. Fixes #1.

--- a/css/index.scss
+++ b/css/index.scss
@@ -1,6 +1,7 @@
 $stereoThumbnailWidth: 450px;
 $monoThumbnailWidth: $stereoThumbnailWidth/2;
 
+#assets,
 body.vr-support-resolved .vr-pending,
 body:not(.vr-support-resolved) .non-vr-only,
 body:not(.vr-support-resolved) .vr-only,
